-- SMSMS Mini-Project — Phase 1 Database Schema
-- PostgreSQL
-- Scope: Order & Batch, Quality Control, Anomaly Detection, Accounts,
--        Sales Forecasting. No machine allocation/scheduling in this version.

-- Users: the 3 login roles (Plant Head / Production Head / Quality Head)
CREATE TABLE users (
    user_id       SERIAL PRIMARY KEY,
    username      VARCHAR(50) UNIQUE NOT NULL,
    password_hash TEXT NOT NULL,             -- store bcrypt hash, never plain text
    role          VARCHAR(20) NOT NULL CHECK (role IN ('plant_head', 'production_head', 'quality_head')),
    is_active     BOOLEAN DEFAULT TRUE,
    created_at    TIMESTAMP DEFAULT NOW()
);

-- Orders: customer job orders. This table doubles as your sales history
-- for the forecasting module.
CREATE TABLE orders (
    order_id      SERIAL PRIMARY KEY,
    customer_name VARCHAR(100) NOT NULL,
    job_type      VARCHAR(50),               -- optional, useful for EDA by category
    order_date    DATE NOT NULL,
    due_date      DATE,
    total_qty     INT NOT NULL,
    total_amount  NUMERIC(12,2),             -- calculate from rate * qty, don't hand-enter
    status        VARCHAR(20) DEFAULT 'active' CHECK (status IN ('active', 'closed')),
    created_at    TIMESTAMP DEFAULT NOW()
);

-- Batches: an order split into trackable production batches over time
CREATE TABLE batches (
    batch_id      SERIAL PRIMARY KEY,
    order_id      INT NOT NULL REFERENCES orders(order_id),
    quantity      INT NOT NULL,
    status        VARCHAR(20) DEFAULT 'pending' CHECK (status IN ('pending', 'in_progress', 'completed')),
    created_at    TIMESTAMP DEFAULT NOW()
);

-- Quality logs: per-batch inspection records, entered by Quality Head
CREATE TABLE quality_logs (
    log_id        SERIAL PRIMARY KEY,
    batch_id      INT NOT NULL REFERENCES batches(batch_id),
    logged_by     INT NOT NULL REFERENCES users(user_id),
    check_date    DATE NOT NULL DEFAULT CURRENT_DATE,
    qty_checked   INT NOT NULL,
    defect_count  INT NOT NULL DEFAULT 0,
    pass_fail     VARCHAR(10) CHECK (pass_fail IN ('pass', 'fail')),
    created_at    TIMESTAMP DEFAULT NOW()
);

-- Anomaly flags: auto-generated by the z-score/IQR script (Phase 4), not
-- entered manually by any user
CREATE TABLE anomaly_flags (
    flag_id        SERIAL PRIMARY KEY,
    quality_log_id INT NOT NULL REFERENCES quality_logs(log_id),
    metric_type    VARCHAR(30) NOT NULL,     -- e.g. 'defect_rate'
    flagged_date   DATE NOT NULL DEFAULT CURRENT_DATE,
    value          NUMERIC(10,4) NOT NULL,
    threshold      NUMERIC(10,4) NOT NULL,
    is_outlier     BOOLEAN NOT NULL,
    created_at     TIMESTAMP DEFAULT NOW()
);

-- Payments: basic accounts tracking per order
CREATE TABLE payments (
    payment_id    SERIAL PRIMARY KEY,
    order_id      INT NOT NULL REFERENCES orders(order_id),
    amount        NUMERIC(12,2) NOT NULL,
    payment_date  DATE NOT NULL DEFAULT CURRENT_DATE,
    status        VARCHAR(20) DEFAULT 'pending' CHECK (status IN ('pending', 'paid', 'partial')),
    created_at    TIMESTAMP DEFAULT NOW()
);

-- Sales forecast: output of the forecasting model (Phase 5). Standalone —
-- represents aggregated period-level predictions, not tied to one order.
CREATE TABLE sales_forecast (
    forecast_id     SERIAL PRIMARY KEY,
    forecast_date   DATE NOT NULL,           -- the period being predicted
    predicted_value NUMERIC(12,2) NOT NULL,
    actual_value    NUMERIC(12,2),           -- filled in once the period passes, for evaluation
    model_used      VARCHAR(50),             -- e.g. 'moving_average', 'linear_regression'
    generated_at    TIMESTAMP DEFAULT NOW()
);

-- Helpful indexes for the forecasting queries (aggregating orders by date)
CREATE INDEX idx_orders_order_date ON orders(order_date);
CREATE INDEX idx_batches_order_id ON batches(order_id);
CREATE INDEX idx_quality_logs_batch_id ON quality_logs(batch_id);
